add figuras com o resultado das analises

--- a/scripts/analise_estatistica/analise_estatistica_dados_diarios.ipynb
+++ b/scripts/analise_estatistica/analise_estatistica_dados_diarios.ipynb
@@ -1245,7 +1245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1395,7 +1395,8 @@
         "    plt.title(f'Distribuição da Chuva Diária por Mês (Período Total) - Estação {estacao} ')\n",
         "    plt.xlabel('Mês')\n",
         "    plt.ylabel('Precipitação Diária (mm)')\n",
-        "    plt.show()"
+        "    plt.show()\n",
+        "    "
       ]
     },
     {
